[gd_scene load_steps=12 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://MiddleLine.gd" type="Script" id=2]
[ext_resource path="res://Base.tscn" type="PackedScene" id=3]
[ext_resource path="res://Health.tscn" type="PackedScene" id=4]
[ext_resource path="res://Rockets.png" type="Texture" id=5]
[ext_resource path="res://Sounds/102733__sarge4267__explosion3.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/109957__rakurka__incoming-ricochets-2_selected_1.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/109957__rakurka__incoming-ricochets-2_selected_2.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/172870__escortmarius__carbidexplosion.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds/156179__jl-barrett__keys-2-single.wav" type="AudioStream" id=10]
[ext_resource path="res://Sounds/409754__las98__43-metal4.wav" type="AudioStream" id=11]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MiddleLine" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Packs" type="Node2D" parent="."]

[node name="Bullets" type="Node2D" parent="."]

[node name="ContainerB" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5

[node name="BaseB" parent="ContainerB" instance=ExtResource( 3 )]
rotation = 3.14159

[node name="HealthB" parent="ContainerB" instance=ExtResource( 4 )]
rotation = 1.5708

[node name="RocketsCount" type="TextureProgress" parent="ContainerB"]
modulate = Color( 1, 1, 1, 0.6 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 340.0
margin_top = 80.0002
margin_right = 940.0
margin_bottom = 448.0
rect_scale = Vector2( -0.2, -0.2 )
max_value = 5.0
value = 5.0
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerA" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0

[node name="BaseA" parent="ContainerA" instance=ExtResource( 3 )]

[node name="HealthA" parent="ContainerA" instance=ExtResource( 4 )]
rotation = -1.5708

[node name="RocketsCount" type="TextureProgress" parent="ContainerA"]
modulate = Color( 1, 1, 1, 0.6 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -340.0
margin_top = -80.0
margin_right = 260.0
margin_bottom = 270.0
rect_scale = Vector2( 0.2, 0.2 )
max_value = 5.0
value = 5.0
texture_progress = ExtResource( 5 )

[node name="RocketExplosionOnAir" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 5.0

[node name="RocketExplosionOnBase" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 10.0

[node name="Ricochet1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0
pitch_scale = 0.8

[node name="Ricochet2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -22.0
pitch_scale = 0.7

[node name="BombExplosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -3.0

[node name="GunUpgradeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = 1.0

[node name="RocketPackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 1.0

[node name="RocketPackInterval" type="Timer" parent="."]
wait_time = 11.0

[node name="GunUpgradeInterval" type="Timer" parent="."]
wait_time = 2.0

[node name="BombInterval" type="Timer" parent="."]
wait_time = 7.0

[node name="MainCamera" type="Camera2D" parent="."]
current = true

[node name="ShakeCamera" type="Tween" parent="."]
repeat = true
playback/repeat = true
[connection signal="item_rect_changed" from="." to="." method="_on_Main_item_rect_changed"]
[connection signal="timeout" from="RocketPackInterval" to="." method="_on_RocketPackInterval_timeout"]
[connection signal="timeout" from="GunUpgradeInterval" to="." method="_on_GunUpgradeInterval_timeout"]
[connection signal="timeout" from="BombInterval" to="." method="_on_BombInterval_timeout"]
[connection signal="tween_completed" from="ShakeCamera" to="." method="_on_ShakeCamera_tween_completed"]
